--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
                 <meta charset="utf-8">
                 <title>Pistiristelyä</title>
                 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-		<link href="node_modules/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="master.css">
 	</head>
 	<body ng-controller="appController" ng-class="{ 'locked': locked }">
@@ -51,10 +50,25 @@
 					<li role="menuitem"><a href>Muokkaa taustan kuvaa</a></li>
 					<li role="menuitem"><a href>Muokkaa ruutuja</a></li>
 
-					<li role="menuitem" class="input-group"><input ng-model="settings.grid_opacity" ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1"></li>
-					<li role="menuitem" class="input-group"><input ng-model="settings.fg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1"></li>
-					<li role="menuitem" class="input-group"><input ng-model="settings.bg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1"></li>
 				</ul>
+				<label>
+					<h5 style="text-align:center;display:block">asd</h5>
+					<div class="input-group">
+						<input ng-model="settings.grid_opacity" ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+					</div>
+				</label>
+				<label class="row">
+					<h5 style="text-align:center;display:block">asd</h5>
+					<div class="input-group">
+						<input ng-model="settings.fg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+					</div>
+				</label>
+				<label>
+					<h5 style="text-align:center;display:block">asd</h5>
+					<div class="input-group">
+						<input ng-model="settings.bg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+					</div>
+				</label>
 			</div>
 			<div class="left-btns">
 				<a class="btn" ng-click="sidebarOpen=!sidebarOpen" ng-class="{ 'active': sidebarOpen }">
@@ -65,11 +79,7 @@
 
 		<input id="inputColor" type="color" style="display:none" />
 
-		<script src="node_modules/jquery/dist/jquery.min.js"></script>	
-		<script src="node_modules/angular/angular.min.js"></script>
-		<script src="node_modules/three/build/three.min.js"></script>
-		<script src="node_modules/stats.js/build/stats.min.js"></script>
-		<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
