--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html ng-app="app">
 	<head>
-                <meta charset="utf-8">
-                <title>Pistiristelyä</title>
-                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta charset="utf-8">
+		<title>Pistiristelyä</title>
+		<meta name="viewport" content="initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="master.css">
@@ -13,7 +13,7 @@
 				<canvas id="canvas" ng-click="onClick( $event )" />
 			</div>
 		</div>
-		<div id="controls" ng-init="sidebarOpen=false">
+		<div id="controls" ng-init="sidebarOpen=false" ng-style="{ 'width': $root.windowWidth+'px', 'height': $root.windowHeight+'px' }">
 			<div class="colors">
 
 				<a class="btn color"
@@ -46,19 +46,19 @@
 				<label class="col-12">
 					<h5 style="text-align:center;display:block">Grid line opacity</h5>
 					<div class="input-group">
-						<input ng-model="settings.grid_opacity" ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+						<input ng-model="settings.grid_opacity" ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
 					</div>
 				</label>
 				<label class="col-12">
 					<h5 style="text-align:center;display:block">Stitchs opacity</h5>
 					<div class="input-group">
-						<input ng-model="settings.fg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+						<input ng-model="settings.fg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
 					</div>
 				</label>
 				<label class="col-12">
 					<h5 style="text-align:center;display:block">Background opacity</h5>
 					<div class="input-group">
-						<input ng-model="settings.bg_opacity"   ng-blur="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+						<input ng-model="settings.bg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
 					</div>
 				</label>
 				<hr>
