--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pistiristelyä</title>
-		<meta name="viewport" content="initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="master.css">
@@ -10,79 +10,87 @@
 	<body ng-controller="appController" ng-class="{ 'locked': locked }">
 		<div id="container">
 			<div id="scene">
-				<canvas id="canvas" ng-click="onClick( $event )" />
+				<canvas id="canvas" ng-click="onClick( $event )" ng-style="{ 'transform': 'scale('+ view.zoomLevel +')', 'left': view.leftOffset+'px', 'top': view.topOffset+'px', 'position': 'absolute' }" />
 			</div>
 		</div>
-		<div id="controls" ng-init="sidebarOpen=false" ng-style="{ 'width': $root.windowWidth+'px', 'height': $root.windowHeight+'px' }">
-			<div class="colors">
+		<div id="colors" class="colors">
 
-				<a class="btn color"
-				   ng-repeat="color in colors"
-				   ng-hide="editingColors"
-				   ng-style="color.btnStyle"
-				   ng-class="{ 'active': selected_color == color }"
-				   ng-click="toggleColorSelection( color )"
-				><span class="oi oi-menu"></span></a>
+			<a class="btn color"
+			   ng-repeat="color in colors"
+			   ng-hide="editingColors"
+			   ng-style="color.btnStyle"
+			   ng-class="{ 'active': selected_color == color }"
+			   ng-click="toggleColorSelection( color )"
+			><span class="oi oi-menu"></span></a>
 
-				<a class="btn btn-rm-color"
-				   ng-repeat="color in colors"
-				   ng-show="editingColors"
-				   ng-style="color.btnStyle"
-				   ng-click="rmColor( color )"
-				><span class="oi oi-trash"></span></a>
+			<a class="btn btn-rm-color"
+			   ng-repeat="color in colors"
+			   ng-show="editingColors"
+			   ng-style="color.btnStyle"
+			   ng-click="rmColor( color )"
+			><span class="oi oi-trash"></span></a>
 
-				<a class="btn"
-				   ng-class="{ 'active': editingColors }"
-				   ng-click="editingColors=!editingColors"
-				><span class="oi oi-cog" ng-class="{ 'oi-x': editingColors }"></span></a>
+			<a class="btn"
+			   ng-class="{ 'active': editingColors }"
+			   ng-click="editingColors=!editingColors"
+			><span class="oi oi-cog" ng-class="{ 'oi-x': editingColors }"></span></a>
 
-				<a class="btn"
-				   ng-style="{ 'visibility': editingColors ? 'visible' : 'hidden' }"
-				   ng-click="addColor()"
-				><span class="oi oi-plus"></span></a>
+			<a class="btn"
+			   ng-style="{ 'visibility': editingColors ? 'visible' : 'hidden' }"
+			   ng-click="addColor()"
+			><span class="oi oi-plus"></span></a>
 
-			</div>
-			<div id="sidebar" class="col-12 col-md-8 col-lg-6" ng-if="sidebarOpen">
-				<label class="col-12">
-					<h5 style="text-align:center;display:block">Grid line opacity</h5>
-					<div class="input-group">
-						<input ng-model="settings.grid_opacity" ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
-					</div>
-				</label>
-				<label class="col-12">
-					<h5 style="text-align:center;display:block">Stitchs opacity</h5>
-					<div class="input-group">
-						<input ng-model="settings.fg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
-					</div>
-				</label>
-				<label class="col-12">
-					<h5 style="text-align:center;display:block">Background opacity</h5>
-					<div class="input-group">
-						<input ng-model="settings.bg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
-					</div>
-				</label>
-				<hr>
-				<div class="row">
-					<div class="col" style="text-align:center">
-						<a href class="btn-clear-stitchs" ng-click="doClearStitches()">Clear stitchs</a>
-					</div>
-					<div class="col" style="text-align:center">
-						<a href ng-hide="bg_image" class="btn-select-bgimage" ng-click="doSelectImage()">Select bgimage</a>
-						<a href ng-show="bg_image" class="btn-clear-bgimage" ng-click="selectImage( null )">Clear bgimage</a>
-					</div>
+		</div>
+		<div id="sidebar" class="col-12 col-md-8 col-lg-6" ng-if="sidebarOpen">
+			<label class="col-12">
+				<h5 style="text-align:center;display:block">Grid line opacity</h5>
+				<div class="input-group">
+					<input ng-model="settings.grid_opacity" ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+				</div>
+			</label>
+			<label class="col-12">
+				<h5 style="text-align:center;display:block">Stitchs opacity</h5>
+				<div class="input-group">
+					<input ng-model="settings.fg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+				</div>
+			</label>
+			<label class="col-12">
+				<h5 style="text-align:center;display:block">Background opacity</h5>
+				<div class="input-group">
+					<input ng-model="settings.bg_opacity"   ng-change="saveSettings()" class="form-control" type="range" min="0" max="1" step="0.1">
+				</div>
+			</label>
+			<hr>
+			<div class="row">
+				<div class="col" style="text-align:center">
+					<a href class="btn-clear-stitchs" ng-click="doClearStitches()">Clear stitchs</a>
+				</div>
+				<div class="col" style="text-align:center">
+					<a href ng-hide="bg_image" class="btn-select-bgimage" ng-click="doSelectImage()">Select bgimage</a>
+					<a href ng-show="bg_image" class="btn-clear-bgimage" ng-click="selectImage( null )">Clear bgimage</a>
 				</div>
 			</div>
-			<div class="left-btns">
-				<a class="btn" ng-click="sidebarOpen=!sidebarOpen" ng-class="{ 'active': sidebarOpen }">
-					<span class="oi" ng-class="[ sidebarOpen ? 'oi-x' : 'oi-menu' ]"></span>
-				</a>
-			</div>
+		</div>
+		<div id="left-btns" class="left-btns">
+			<a class="btn" ng-click="sidebarOpen=!sidebarOpen" ng-class="{ 'active': sidebarOpen }">
+				<span class="oi" ng-class="[ sidebarOpen ? 'oi-x' : 'oi-menu' ]"></span>
+			</a>
+			<a class="btn" ng-click="toggleFullScreen()" ng-show="sidebarOpen || $root.inFullscreen">
+				<span class="oi" ng-class="'oi-fullscreen-'+($root.inFullscreen?'exit':'enter')"></span>
+			</a>
+			<a class="btn" ng-click="zoom(0.9)" ng-hide="sidebarOpen">
+				<span class="oi oi-minus"></span>
+			</a>
+			<a class="btn" ng-click="zoom(1.1)" ng-hide="sidebarOpen">
+				<span class="oi oi-plus"></span>
+			</a>
 		</div>
 
 		<input id="inputColor" type="color" style="display:none" />
 		<input id="inputFile"  type="file"  style="display:none" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+		<script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
